--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
                 <div class="col-lg-6">
                     <div class="row">
                         <div class="col-12 col-sm-6 team-img">
-                            <img src="/images/office/female-doc.jpg" class="w-100 rounded" alt="">
+                            <img src="https://i.ibb.co/9WPSdV4/female-doc.jpg" class="w-100 rounded" alt="">
                             <h4 class="mt-4 text-center evelyn-info">Ευαγγελία Τσίγκα</h4>
                             <p class="mt-4"><i style="color: var(--orange-color);"
                                     class="fa-solid fa-envelope pe-2"></i>evelyntsiga@gmail.com</a> <br><br>
