--- a/about.html
+++ b/about.html
@@ -101,19 +101,19 @@
                 <div class=" swiper mySwiper">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
-                            <img src="/images/office/office-1.jpg" />
+                            <img src="https://i.ibb.co/rsw4dgs/office-1.jpg" />
                         </div>
                         <div class="swiper-slide">
-                            <img src="/images/office/office-2.jpg" />
+                            <img src="https://i.ibb.co/mbxHgf4/office-2.jpg" />
                         </div>
                         <div class="swiper-slide">
-                            <img src="/images/office/office-3.jpg" />
+                            <img src="https://i.ibb.co/7vkGZ1n/office-3.jpg" />
                         </div>
                         <div class="swiper-slide">
-                            <img src="/images/office/office-4.jpg" />
+                            <img src="https://i.ibb.co/zsqdrNp/office-4.jpg" />
                         </div>
                         <div class="swiper-slide">
-                            <img src="/images/office/office-5.jpg" />
+                            <img src="https://i.ibb.co/4Mt0ZJf/office-5.jpg" />
                         </div>
                     </div>
                     <div class="swiper-button-next"></div>
@@ -158,7 +158,7 @@
                     <div class="container">
                         <div class="row">
                             <div class="female-provider mb-5">
-                                <img class="rounded" src="/images/office/female-doc.jpg" alt="">
+                                <img class="rounded" src="https://i.ibb.co/9WPSdV4/female-doc.jpg" alt="">
                                 <div class="providers-text ps-2 ps-md-5 pe-2">
                                     <h3 class="my-4">Ευαγγελία Τσίγκα</h3>
                                     <p class="mb-0 custom-font-size-providers">Γεννήθηκα την 1η Απριλίου του 1979 στα
