--- a/contact.html
+++ b/contact.html
@@ -268,7 +268,7 @@
 						<div id="collapseFive" class="accordion-collapse collapse" aria-labelledby="headingFive"
 							data-bs-parent="#accordionExample">
 							<div class="accordion-body">
-								Ναι, το ιατρεία προσφέρει την συγκεκριμένη υπηρεσία για ηλικιωμένους και για άτομα που
+								Ναι, το ιατρείο προσφέρει την συγκεκριμένη υπηρεσία για ηλικιωμένους και για άτομα που
 								δεν είναι εύκολη ή εφικτή η μετακίνησή τους.
 							</div>
 						</div>
