--- a/index.html
+++ b/index.html
@@ -149,7 +149,8 @@
                 <h1 class="my-4">Η έννοια του <span class="fw-bold" style="color:var(--orange-color)">Οικογενειακού
                         ιατρού.</span>
                 </h1>
-                <h5>Ο γενικός ιατρός αποτελεί την ασπίδα του συστήματος υγείας, εκείνος που βοηθά στη διαχείριση των
+                <h5>Ο γενικός ιατρός αποτελεί την ασπίδα του συστήματος υγείας, είναι εκείνος που βοηθά στη διαχείριση
+                    των
                     οξέων και χρόνιων νοσημάτων, εμποδίζοντας την χωρίς λόγο αναζήτηση φροντίδας σε τριτοβάθμια επίπεδο
                     (νοσοκομείο).
                     Είναι ο ιατρός που είναι εξειδικευμένος στην φροντίδα της υγείας όλων των μελών της οικογένειας,
@@ -379,7 +380,7 @@
                             </p>
                         </div>
                         <div class="col-12 col-sm-6 mt-3 mt-sm-0 team-img">
-                            <img src="images/docfemale.jpg" class="w-100 rounded" alt="">
+                            <img src="https://i.ibb.co/BV47n0r/male-doc.jpg" class="w-100 rounded" alt="">
                             <h4 class="mt-4 text-center">Αγραφιώτης Γεώργιος</h4>
                             <p class="mt-4"><i style="color: var(--orange-color);"
                                     class="fa-solid fa-envelope pe-2 pe-lg-0 pe-xl-2"></i>agrafiotis.iatros@yahoo.gr</a>
@@ -640,7 +641,7 @@
                         <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
                             data-bs-parent="#accordionExample">
                             <div class="accordion-body">
-                                Το ιατρείο μας λειτουργεί Δευτέρα με Παρασκευή από τις 10:30 εώς τις 14:30 και 18:30 εώς
+                                Το ιατρείο μας λειτουργεί Δευτέρα με Παρασκευή από τις 10:30 εώς τις 14:30 και 16:30 εώς
                                 21:30.
                             </div>
                         </div>
