--- a/contact.html
+++ b/contact.html
@@ -86,8 +86,8 @@
 									τον γιατρό σας</label>
 								<select style="color:var(--light-grey)" class="form-select" id="recipient"
 									name="recipient">
-									<option value="evelyntsiga@gmail.com">Dr. Ευαγγελία Τσίγκα</option>
-									<option value="agrafiotis.iatros@yahoo.gr">Dr. Αγραφιώτης Γεώργιος</option>
+									<option value="evelyntsiga@gmail.com">Ευαγγελία Τσίγκα</option>
+									<option value="agrafiotis.iatros@yahoo.gr">Αγραφιώτης Γεώργιος</option>
 								</select>
 							</div>
 							<div class="mt-4 form-floating mb-3">
@@ -128,7 +128,7 @@
 	<div class="section-divider">
 		<div class="container-fluid">
 			<div class="evelin text-center py-4 slideElement">
-				<h2>Dr. Ευαγγελία Τσίγκα</h2>
+				<h2>Ευαγγελία Τσίγκα</h2>
 				<div class="row mt-md-5">
 					<div class="col-12 col-md-4 mt-5 mt-md-2">
 						<div class="text-center">
@@ -158,7 +158,7 @@
 	<div class="section-divider mt-2">
 		<div class="container-fluid">
 			<div class="text-center py-4 slideElement">
-				<h2>Dr. Αγραφιώτης Γεώργιος</h2>
+				<h2>Αγραφιώτης Γεώργιος</h2>
 				<div class="row mt-md-5">
 					<div class="col-12 col-md-4 mt-5 mt-md-2">
 						<div class="text-center">
@@ -239,7 +239,7 @@
 						<div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
 							data-bs-parent="#accordionExample">
 							<div class="accordion-body">
-								Το ιατρείο μας λειτουργεί Δευτέρα με Παρασκευή από τις 10:30 εώς τις 14:30 και 18:30 εώς
+								Το ιατρείο μας λειτουργεί Δευτέρα με Παρασκευή από τις 10:30 εώς τις 14:30 και 16:30 εώς
 								21:30.
 							</div>
 						</div>
