--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             <div class="col-md-6 d-flex align-items-center justify-content-center overflow-hidden" style="padding: 0;">
                 <img src="images/family.jpg" class="img-fluid max-100vh" style="width: 100%;">
             </div>
-            <div class="head-text col-md-6 px-5 py-2 py-md-5 mt-md-5 mt-0">
+            <div class="slideElement head-text col-md-6 px-5 py-2 py-md-5 mt-md-5 mt-0">
                 <h3>Ζήσε <span class="fw-bold" style="color:var(--orange-color)">υγιής</span>, ζήσε <span
                         class="fw-bold" style="color:var(--orange-color)">ευτυχισμένος</span></h3>
                 <h1 class="mb-5 mt-5">Υγεία και ευεξία για<span class="fw-bold" style="color:var(--orange-color)"> όλη
@@ -161,7 +161,8 @@
             </div>
             <div class="about-img col-md-6 d-flex align-items-center justify-content-center overflow-hidden"
                 style="padding: 0;">
-                <img src="images/doctor.jpg" class="rounded img-fluid max-100vh" style="width: 70%; height: 70%;">
+                <img src="images/mother-with-kid.jpg" class="rounded img-fluid max-100vh"
+                    style="width: 70%; height: 70%;">
             </div>
         </div>
     </section>
@@ -360,7 +361,7 @@
                     <h1 class="mt-2">Γνωρίστε του <span class="fw-bold" style="color:var(--orange-color)">γιατρούς
                             μας</span></h1>
                     <p class="mt-4 mb-0">Γνωρίστε τους δύο εξαιρετικούς οικογενειακούς γιατρούς μας. Με πάνω από 20
-                        χρόνια εμπειρίας , είναι αφοσιωμένοι στην παροχή υψηλής ποιότητας και εξατομικευμένης φροντίδας
+                        χρόνια εμπειρίας, είναι αφοσιωμένοι στην παροχή υψηλής ποιότητας και εξατομικευμένης φροντίδας
                         σε κάθε έναν από τους ασθενείς τους.</p>
                     <br>
                     <p class="mt-0">Οι γιατροί μας έχουν μια βαθιά αγάπη για την οικογενειακή ιατρική και κατανοούν τη
@@ -727,6 +728,8 @@
                             <input type="email" class="form-control" id="floatingInput" placeholder="email@example.com"
                                 name="email" required>
                             <label class="form-inner" for="floatingInput">e-mail</label>
+                            <!-- Honeypot field -->
+                            <input type="text" name="honeypot" style="display:none">
                         </div>
                         <div class="">
                             <label class="form-inner" for="exampleFormControlTextarea1" class="form-label"></label>
@@ -736,8 +739,8 @@
                         <div class=" mt-0">
                             <label style="color:var(--light-grey)" for="recipient" class="form-label ms-2"></label>
                             <select style="color:var(--light-grey)" class="form-select" id="recipient" name="recipient">
-                                <option value="info@scubacorfu.com">Ευαγγελία Τσίγκα</option>
-                                <option value="agrafiotis.iatros@yahoo.gr">Αγραφιώτης Γεώργιος</option>
+                                <option value="evelyntsiga@gmail.com">Ευαγγελία Τσίγκα</option>
+                                <option value="agrafiotis.georgios.iatros@gmail.com">Αγραφιώτης Γεώργιος</option>
                             </select>
                         </div>
                         <button class="btn btn3 mt-3 w-100" type="submit">Αποστολή</button>
