--- a/service.html
+++ b/service.html
@@ -18,7 +18,10 @@
     <link rel="icon" type="image/x-icon" href="/faviconlogo.ico">
     <link rel="stylesheet" href="css/service.css">
     <link rel="stylesheet" href="css/utilities.css">
-    <title>Document</title>
+
+    <title>Υπηρεσίες - Οικογενειακό Ιατρείο Ευαγγελία Τσίγκα και Αγραφιώτη Γεώργιου</title>
+    <meta name="description"
+        content="Δείτε τις υπηρεσίες που προσφέρουν οι οικογενειακοί γιατροί μας Ευαγγελία Τσίγκα και Αγραφιώτη Γεώργιου στη Θεσσαλονίκη οι οποίες μπορούν να γίνουν και κατ οίκον">
 </head>
 
 <body class="light">
@@ -76,12 +79,12 @@
 
     <section class="services">
         <div class="my-5 px-3 text-center">
-            <h1 id="genikes-eksetaseis">Οι υπηρεσίες του <span class="fw-bold"
+            <h1 class="slideElement " id="genikes-eksetaseis">Οι υπηρεσίες του <span class="fw-bold"
                     style="color:var(--orange-color)">ιατρείου μας</span></h1>
         </div>
         <div class="container">
             <div class="row">
-                <div class="img-left px-5 col-12 mt-3">
+                <div class="slideElement img-left px-5 col-12 mt-3">
                     <img class="me-md-5" src="svg/stythoscope.svg" alt="">
                     <h3 class="mt-md-0 my-4">Προληπτική εξέταση</h3>
                     <p class="mt-0">Στο ιατρείο δίνεται η δυνατότητα προληπτικής εξέτασης. Το μεγαλύτερο μέρος της
@@ -100,7 +103,7 @@
                         νοσημάτων που επιπολάζουν σε κάθε ηλικιακή ομάδα.</p>
                 </div>
                 <hr id="xronies-pathiseis" class="mx-auto my-5" style="width:3%">
-                <div class="img-right px-5 col-12 mt-3">
+                <div class="slideElement img-right px-5 col-12 mt-3">
                     <img class="ms-md-5" src="svg/cardiograph.svg" alt="">
                     <h3 class="mt-md-0 my-4">Χρόνιες παθήσεις</h3>
                     <p class="mt-0">Στο ιατρείο δίνεται η δυνατότητα παρακολούθησης των συχνότερων χρόνιων παθήσεων του
@@ -114,7 +117,7 @@
                     </p>
                 </div>
                 <hr id="xap" class="mx-auto my-5" style="width:3%">
-                <div class="img-left px-5 col-12 mt-3">
+                <div class="slideElement img-left px-5 col-12 mt-3">
                     <img class="me-md-5" src="svg/syringe.svg" alt="">
                     <h3 class="mt-md-0 my-4">Εμβολιασμός ενηλίκων</h3>
                     <p class="mt-0">Στα πλαίσια της προληπτικής ιατρικής ιδιαίτερη έμφαση δίνεται στη λήψη στο ιστορικού
@@ -127,7 +130,7 @@
                     </p>
                 </div>
                 <hr id="osteoporosi" class="mx-auto my-5" style="width:3%">
-                <div class="img-right px-5 col-12 mt-3">
+                <div class="slideElement img-right px-5 col-12 mt-3">
                     <img class="ms-md-5" src="svg/healthcare.svg" alt="">
                     <h3 class="mt-md-0 my-4">LifeStyle Medicine</h3>
                     <p class="mt-0">Στο ιατρείο εφαρμόζονται οι βασικές αρχές του Lifestyle Medicine, και προτείνονται
@@ -137,7 +140,7 @@
                         διατήρηση της ψυχοσωματικής ισορροπίας και η πρόληψη της ψυχικής και σωματικής νόσου.</p>
                 </div>
                 <hr id="covid" class="mx-auto my-5" style="width:3%">
-                <div class="img-left px-5 col-12 mt-3">
+                <div class="slideElement img-left px-5 col-12 mt-3">
                     <img class="me-md-5" src="svg/mask.svg" alt="">
                     <h3 class="mt-md-0 my-4">Covid19</h3>
                     <p class="mt-0">Η COVID-19 είναι μια ιογενής λοίμωξη του αναπνευστικού συστήματος που προκαλείται
@@ -148,7 +151,7 @@
                         κανόνων υγιεινής και κοινωνικής απόστασης, τη χρήση μάσκας και την εμβολιαστική κάλυψη.</p>
                 </div>
                 <hr id="epeigouses-katastaseis" class="mx-auto my-5" style="width:3%">
-                <div class="img-right px-5 col-12 mt-3">
+                <div class="slideElement img-right px-5 col-12 mt-3">
                     <img class="ms-md-5" src="svg/health-healthcare-medical-medicine.svg" alt="">
                     <h3 class="mt-md-0 my-4">Επείγουσες καταστάσεις</h3>
                     <p class="mt-0">Στο ιατρείο δίνεται η δυνατότητα για αντιμετώπιση αρκετών επειγουσών καταστάσεων της
@@ -160,7 +163,7 @@
                     </p>
                 </div>
                 <hr id="sintagografisi" class="mx-auto my-5" style="width:3%">
-                <div class="img-left px-5 col-12 mt-3">
+                <div class="slideElement img-left px-5 col-12 mt-3">
                     <img class="me-md-5" src="svg/cure.svg" alt="">
                     <h3 class="mt-md-0 my-4">Διαχείριση Πόνου</h3>
                     <p class="mt-0">Το ιατρείο δίνεται προτεραιότητα σε ασθενείς που πάσχουν από οξύ και χρόνιο πόνο.
@@ -177,7 +180,7 @@
                     </p>
                 </div>
                 <hr id="katoikon" class="mx-auto my-5" style="width:3%">
-                <div class="img-right px-5 col-12 mt-3 mb-5">
+                <div class="slideElement img-right px-5 col-12 mt-3 mb-5">
                     <img class="ms-md-5" src="svg/health-healthcare-home.svg" alt="">
                     <h3 class="mt-md-0 my-4 mb-xs">Φροντίδα κατ΄οίκον - Παρηγορητική Φροντίδα</h3>
                     <p class="mt-0">Η φροντίδα κατ' οίκον αναφέρεται στην παροχή ιατρικής φροντίδας στο σπίτι του
@@ -224,6 +227,8 @@
                             <input type="email" class="form-control" id="floatingInput" placeholder="email@example.com"
                                 name="email" required>
                             <label class="form-inner" for="floatingInput">e-mail</label>
+                            <!-- Honeypot field -->
+                            <input type="text" name="honeypot" style="display:none">
                         </div>
                         <div class="">
                             <label class="form-inner" for="exampleFormControlTextarea1" class="form-label"></label>
@@ -233,8 +238,8 @@
                         <div class=" mt-0">
                             <label style="color:var(--light-grey)" for="recipient" class="form-label ms-2"></label>
                             <select style="color:var(--light-grey)" class="form-select" id="recipient" name="recipient">
-                                <option value="info@scubacorfu.com">Ευαγγελία Τσίγκα</option>
-                                <option value="agrafiotis.iatros@yahoo.gr">Αγραφιώτης Γεώργιος</option>
+                                <option value="evelyntsiga@gmail.com">Ευαγγελία Τσίγκα</option>
+                                <option value="agrafiotis.georgios.iatros@gmail.com">Αγραφιώτης Γεώργιος</option>
                             </select>
                         </div>
                         <button class="btn btn3 mt-3 w-100" type="submit">Αποστολή</button>
